Adds create blob and delete blob operations for blobstore API:
 * Functionality is added only for Amazon driver (ie S3) for now - Rackspace, Azure to follow.
 * Simple upload from client --> deltacloud for now (not stream) but streaming from deltacloud --> s3
 * Adds appropriate haml for creating blob over html form
 * Uses the sinatra :method_override hack for Delete operation over HTML form (using post).

git-svn-id: https://svn.apache.org/repos/asf/incubator/deltacloud/trunk@1039280 13f79535-47bb-0310-9956-ffa450edef68

--- a/server/views/blobs/show.html.haml
+++ b/server/views/blobs/show.html.haml
@@ -3,18 +3,24 @@
   = @blob.id
 
 %dl
-  %dt bucket
-  %dd
-    = @blob.bucket
-  %dt Content_Length
-  %dd
-    = @blob.content_length
-  %dt Content_Type
-  %dd
-    = @blob.content_type
-  %dt Last_Modified
-  %dd
-    = @blob.last_modified
-  %dt Content
-  %dd
-    =link_to 'Blob content', bucket_url(@blob.bucket) + '/' + @blob.id + '/content'
+  %di
+    %dt Bucket
+    %dd
+      = @blob.bucket
+    %dt Content_Length
+    %dd
+      = @blob.content_length
+    %dt Content_Type
+    %dd
+      = @blob.content_type
+    %dt Last_Modified
+    %dd
+      = @blob.last_modified
+    %dt Content
+    %dd
+      =link_to 'Blob content', bucket_url(@blob.bucket) + '/' + @blob.id + '/content'
+    %dt Delete this Blob
+    %dd
+      %form{ :action => bucket_url(@blob.bucket) + '/' + @blob.id , :method => :post }
+        %input{ :type => "hidden", :name => "_method", :value => "delete"}
+        %input{ :type => :submit, :value => "Delete"}/
