--- a/server/views/buckets/show.html.haml
+++ b/server/views/buckets/show.html.haml
@@ -14,6 +14,9 @@
     %dd
       -@bucket.blob_list.each do |blob|
         = link_to blob, bucket_url(@bucket.name) + '/' + blob
-    %dt delete bucket (must be empty)
+    %dt Delete bucket (must be empty)
     %dd
       =link_to 'Delete', destroy_bucket_url(@bucket.name), :class => 'delete'
+    %dt Create a new blob
+    %dd
+      =link_to 'Create Blob', bucket_url(@bucket.name) + '/new_blob'
