Removed Javascript helper for calling DELETE and POST requests since Sinatra can handle this itself using method overide. (thx. Marios)
git-svn-id: https://svn.apache.org/repos/asf/incubator/deltacloud/trunk@1039381 13f79535-47bb-0310-9956-ffa450edef68

--- a/server/public/stylesheets/compiled/application.css
+++ b/server/public/stylesheets/compiled/application.css
@@ -611,3 +611,5 @@ input[type='radio'] {
 table.docs { border : 1px solid #ccc }
 table.docs td { border : 1px solid #ccc }
 table.docs table td { border : none }
+
+td form.link { display : inline }
