--- a/server/views/instances/index.html.haml
+++ b/server/views/instances/index.html.haml
@@ -27,4 +27,4 @@
           = instance.state
         %td
           -instance.actions.each do |action|
-            =link_to action, self.send(:"#{action}_instance_url", instance.id), :class => instance_action_method(action)
+            =link_to_action action, self.send(:"#{action}_instance_url", instance.id), instance_action_method(action)
