--- a/server/views/realms/index.html.haml
+++ b/server/views/realms/index.html.haml
@@ -5,15 +5,13 @@
   %thead
     %tr
       %th
+        ID
+      %th
         Name
       %th
-        Architecture
+        State
       %th
-        Memory
-      %th
-        Storage
-      %th
-        Mutable
+        Limit
   %tbody
     - @realms.each do |realm|
       %tr
@@ -25,5 +23,4 @@
           = realm.state
         %td
           = realm.limit
-        %td
 
