Allow for dynamic driver selection via header, storing it in Thread.current.
git-svn-id: https://svn.apache.org/repos/asf/incubator/deltacloud/trunk@1041354 13f79535-47bb-0310-9956-ffa450edef68

--- a/server/views/api/show.html.haml
+++ b/server/views/api/show.html.haml
@@ -1,5 +1,5 @@
 %h1
-  API v#{@version}
+  API v#{settings.version}
 
 %ul
   - collections.keys.sort_by { |k| k.to_s }.each do |key|
@@ -12,4 +12,4 @@
             = op
   %li
     %strong
-      %a{:href => url_for("/api/docs")} Documentation (v#{@version})
+      %a{:href => url_for("/api/docs")} Documentation (#{settings.version})
