--- a/server/views/layout.html.haml
+++ b/server/views/layout.html.haml
@@ -19,7 +19,7 @@
         = yield
       #footer
         #driver_info
-          Driver: #{DRIVER}
+          Driver: #{driver_symbol} | API version: #{settings.version}
         #copyright
           Copyright 2009, 2010
           %a{:href => 'http://redhat.com'} Red Hat
