Adds 'create_blob' and 'delete_blob' for rackspace cloudfiles. Also some minor mods to haml for aesthetics (move 'delete' button and only display when bucket.size == 0)
git-svn-id: https://svn.apache.org/repos/asf/incubator/deltacloud/trunk@1041917 13f79535-47bb-0310-9956-ffa450edef68

--- a/server/views/buckets/index.html.haml
+++ b/server/views/buckets/index.html.haml
@@ -30,4 +30,5 @@
           -bucket.blob_list.each do |blob|
             = blob
         %td
-          =link_to_action 'Delete', destroy_bucket_url(bucket.name), :delete
+          -if bucket.size == 0
+            =link_to_action 'Delete', destroy_bucket_url(bucket.name), :delete
