Added CDATA to image name and image description, to avoid breaking XML when this fields contains unsupported characters.
git-svn-id: https://svn.apache.org/repos/asf/incubator/deltacloud/trunk@1043107 13f79535-47bb-0310-9956-ffa450edef68

--- a/server/views/images/index.xml.haml
+++ b/server/views/images/index.xml.haml
@@ -4,5 +4,9 @@
     %image{:href => image_url(image.id), :id => image.id}
       - image.attributes.select{ |attr| attr!=:id }.each do |attribute|
         - haml_tag("#{attribute}".tr('-', '_'), :<) do
-          - haml_concat image.send(attribute)
+          - if [:name, :description].include?(attribute)
+            =cdata do
+              - haml_concat image.send(attribute)
+          - else
+            - haml_concat image.send(attribute)
 
