Wrap error messages and details in CDATA
The xml parser used by nokogiri-java (xerces) is much more strict about
unescaped entities, and causes nokogiri to ignore nodes containing them.
Wrapping the content in CDATA blocks fixes this.

Note: this fix does not use the haml :cdata filter, since you cannot
strip whitespace inside the filter.

git-svn-id: https://svn.apache.org/repos/asf/incubator/deltacloud/trunk@1044335 13f79535-47bb-0310-9956-ffa450edef68

--- a/server/views/errors/backend_capability_failure.xml.haml
+++ b/server/views/errors/backend_capability_failure.xml.haml
@@ -1,4 +1,5 @@
 %error{:url => "#{request.env['REQUEST_URI']}", :status => "#{response.status}"}
   %capability #{@error.capability}
-  %message #{@error.message}
+  %message< #{cdata @error.message}
+
 
