--- a/server/views/errors/backend_error.xml.haml
+++ b/server/views/errors/backend_error.xml.haml
@@ -4,5 +4,5 @@
     %code= @error.code
     %cause= @error.cause
     - if @error.details
-      %details #{@error.details}
-  %message #{@error.message}
+      %details< #{cdata @error.details.join("\n")}
+  %message< #{cdata @error.message}
