site: fix provider popup on top level page
git-svn-id: https://svn.apache.org/repos/asf/incubator/deltacloud/trunk@1050231 13f79535-47bb-0310-9956-ffa450edef68

--- a/site/content/index.haml
+++ b/site/content/index.haml
@@ -40,3 +40,6 @@ filter: haml
           = item
   %br
   %br
+#popups{ :style => "display:none;" }
+  #providers
+    = render(:partial => "providers")
