site: add a roadmap
git-svn-id: https://svn.apache.org/repos/asf/incubator/deltacloud/trunk@1050232 13f79535-47bb-0310-9956-ffa450edef68

--- a/site/content/index.haml
+++ b/site/content/index.haml
@@ -22,6 +22,11 @@ filter: haml
           Support for all major cloud service providers
       %li
         Backward compatibility across versions, providing long-term stability for scripts, tools and applications
+      %li
+        Check the
+        %a{ :href => "roadmap.html", :title => "Roadmap" }
+          roadmap
+        to see what we are working on
   .right
     %img{ :src => "styles/diagram-soa.png", :height => "265", :alt => "diagram-soa", :width => "620", :style => "margin-bottom:1em;" }
   %p.foot
