--- a/server/views/keys/index.html.haml
+++ b/server/views/keys/index.html.haml
@@ -18,7 +18,7 @@
             = "#{key.username} - #{key.password}"
         %td
           - if driver.respond_to?(:destroy_key)
-            =link_to_action 'Destroy', destroy_key_url(key.id), :delete
+            =link_to 'Destroy', destroy_key_url(key.id), :class => 'delete'
   %tfoot
     - if driver.respond_to?(:create_key)
       %tr
