Request parameters are reported when backend error exception raised
git-svn-id: https://svn.apache.org/repos/asf/incubator/deltacloud/trunk@1055003 13f79535-47bb-0310-9956-ffa450edef68

--- a/server/views/errors/backend_error.html.haml
+++ b/server/views/errors/backend_error.html.haml
@@ -7,6 +7,9 @@
     %dt Request URL
     %dd= request.env['REQUEST_URI']
   %di
+    %dt Parameters
+    %dd= params.inspect
+  %di
     %dt Code
     %dd= @error.code
   %di
