Fixed storage_volumes and storage_snapshots collections for EC2
git-svn-id: https://svn.apache.org/repos/asf/incubator/deltacloud/trunk@1055004 13f79535-47bb-0310-9956-ffa450edef68

--- a/server/views/storage_snapshots/index.html.haml
+++ b/server/views/storage_snapshots/index.html.haml
@@ -7,6 +7,7 @@
       %th Volume
       %th Created
       %th State
+      %th Actions
   %tbody
     - @storage_snapshots.each do |snapshot|
       %tr
@@ -18,3 +19,5 @@
           = snapshot.created
         %td
           = snapshot.state
+        %td
+          = link_to_action "Delete", destroy_storage_snapshot_url(snapshot.id), :delete
