--- a/server/views/storage_volumes/index.html.haml
+++ b/server/views/storage_volumes/index.html.haml
@@ -5,8 +5,10 @@
     %tr
       %th ID
       %th Created
+      %th Realm
       %th Capacity
       %th Status
+      %th Actions
   %tbody
     - @storage_volumes.each do |volume|
       %tr
@@ -15,7 +17,20 @@
         %td
           = volume.created
         %td
+          = volume.realm_id
+        %td
           = "#{volume.capacity} GB"
         %td
           = "#{volume.state}"
-
+        %td
+          - if ["AVAILABLE", "IN-USE"].include?(volume.state)
+            =link_to_action "Snaphot", url_for("/api/storage_snapshots/new?volume_id=#{volume.id}"), :get
+            - unless volume.instance_id
+              =link_to_action "Delete", destroy_storage_volume_url(volume.id), :delete
+              =link_to_action "Attach", url_for("/api/storage_volumes/attach?id=#{volume.id}"), :get
+            - if volume.instance_id
+              =link_to_action "Detach", detach_storage_volume_url(volume.id), :post
+  %tfoot
+    %tr
+      %td{:colspan => 6}
+        %a{ :href => url_for("/api/storage_volumes/new")} Create volume
