--- a/server/views/storage_volumes/index.xml.haml
+++ b/server/views/storage_volumes/index.xml.haml
@@ -1,13 +1,4 @@
 !!!XML
 %storage_volumes
   - @elements.each do |volume|
-    %storage_volume{ :href => storage_volume_url(volume.id), :id => volume.id }
-      %created<
-        =volume.created
-      %capacity{ :unit => "GB" }<
-        = volume.capacity
-      - unless volume.instance_id.nil?
-        %mount
-          %instance{:href => instance_url(volume.instance_id), :id => volume.instance_id}
-          - unless volume.device.nil?
-            %device{ :name => volume.device }
+    = haml :'storage_volumes/show', :locals =>  { :@storage_volume =>  volume, :partial =>  true } 
