--- a/server/views/storage_volumes/show.xml.haml
+++ b/server/views/storage_volumes/show.xml.haml
@@ -1,11 +1,18 @@
-!!!XML
+- unless defined?(partial)
+  !!!XML
 %storage_volume{ :href => storage_volume_url(@storage_volume.id), :id => @storage_volume.id}
   %created<
     =@storage_volume.created
   %capacity{ :unit => "GB" }<
     = @storage_volume.capacity
+  %state<
+    = @storage_volume.state
   - unless @storage_volume.instance_id.nil?
     %mount
       %instance{:href => @storage_volume.instance_id, :id => @storage_volume.instance_id}
       - unless @storage_volume.device.nil?
         %device{ :name => @storage_volume.device }
+  - if @storage_volume.actions
+    %actions
+      - @storage_volume.actions.each do |action|
+        %link{:rel => action, :method => action_method(action, :storage_volumes), :href => self.send("#{action}_storage_volume_url", @storage_volume.id)}
