Show the realm_id for the storage volume.
git-svn-id: https://svn.apache.org/repos/asf/incubator/deltacloud/trunk@1055013 13f79535-47bb-0310-9956-ffa450edef68

--- a/server/views/storage_volumes/show.html.haml
+++ b/server/views/storage_volumes/show.html.haml
@@ -11,6 +11,10 @@
     %dd
       = "#{@storage_volume.capacity} GB"
   %di
+    %dt Realm
+    %dd
+      = @storage_volume.realm_id
+  %di
     %dt State
     %dd
       = @storage_volume.state
