Added name and kind properties to Storage Volume model to match RHEV-M model of Storage Domain
git-svn-id: https://svn.apache.org/repos/asf/incubator/deltacloud/trunk@1055023 13f79535-47bb-0310-9956-ffa450edef68

--- a/server/views/storage_volumes/show.html.haml
+++ b/server/views/storage_volumes/show.html.haml
@@ -3,6 +3,10 @@
 
 %dl
   %di
+    %dt Name
+    %dd
+      = @storage_volume.name
+  %di
     %dt Created
     %dd
       = @storage_volume.created
