--- a/server/views/storage_volumes/show.xml.haml
+++ b/server/views/storage_volumes/show.xml.haml
@@ -1,14 +1,20 @@
 - unless defined?(partial)
   !!!XML
 %storage_volume{ :href => storage_volume_url(@storage_volume.id), :id => @storage_volume.id}
-  %created<
-    =@storage_volume.created
+  - if @storage_volume.created
+    %created<
+      =@storage_volume.created
   %capacity{ :unit => "GB" }<
     = @storage_volume.capacity
-  %realm_id<
-    = @storage_volume.realm_id
-  %state<
-    = @storage_volume.state
+  - if @storage_volume.kind
+    %kind
+      = @storage_volume.kind
+  - if @storage_volume.name
+    %name
+      = @storage_volume.name
+  - if @storage_volume.device
+    %device
+      = @storage_volume.device
   - unless @storage_volume.instance_id.nil?
     %mount
       %instance{:href => @storage_volume.instance_id, :id => @storage_volume.instance_id}
