--- a/server/views/error.html.haml
+++ b/server/views/error.html.haml
@@ -15,7 +15,7 @@
       #header
         = link_to image_tag( "/images/logo-wide.png" ), root_url
       = bread_crumb
-      #content
+      #content{:class => :error}
         = yield
       #footer
         #formats
