Moved Load Balancers from old EC2 driver to new one.
git-svn-id: https://svn.apache.org/repos/asf/incubator/deltacloud/trunk@1055886 13f79535-47bb-0310-9956-ffa450edef68

--- a/server/views/load_balancers/new.html.haml
+++ b/server/views/load_balancers/new.html.haml
@@ -28,11 +28,11 @@
   %p
     %label
       Load balancer port:
-    %input{ :name => "listener_lbr_port", :size => 30}
+    %input{ :name => "listener_balancer_port", :size => 30}
   %p
     %label
       Instances port:
-    %input{ :name => "listener_inst_port", :size => 30}
+    %input{ :name => "listener_instance_port", :size => 30}
   %p
     %input{ :type => :submit, :name => "commit", :value => "create" }/
 
