Include storage volume realm and state in xml output.
The realm_id and state were in the view before, but we lost them with
the RHEV-M patches.

git-svn-id: https://svn.apache.org/repos/asf/incubator/deltacloud/trunk@1060636 13f79535-47bb-0310-9956-ffa450edef68

--- a/server/views/storage_volumes/show.xml.haml
+++ b/server/views/storage_volumes/show.xml.haml
@@ -15,6 +15,13 @@
   - if @storage_volume.device
     %device
       = @storage_volume.device
+  - if @storage_volume.realm_id
+    %realm_id<
+      = @storage_volume.realm_id
+  - if @storage_volume.state
+    %state<
+      = @storage_volume.state
+
   - unless @storage_volume.instance_id.nil?
     %mount
       %instance{:href => @storage_volume.instance_id, :id => @storage_volume.instance_id}
