Fixed XML for storage_volumes
git-svn-id: https://svn.apache.org/repos/asf/incubator/deltacloud/trunk@1061222 13f79535-47bb-0310-9956-ffa450edef68

--- a/server/views/storage_volumes/show.xml.haml
+++ b/server/views/storage_volumes/show.xml.haml
@@ -7,13 +7,13 @@
   %capacity{ :unit => "GB" }<
     = @storage_volume.capacity
   - if @storage_volume.kind
-    %kind
+    %kind<
       = @storage_volume.kind
   - if @storage_volume.name
-    %name
+    %name<
       = @storage_volume.name
   - if @storage_volume.device
-    %device
+    %device<
       = @storage_volume.device
   - if @storage_volume.realm_id
     %realm_id<
