Minor UI fixes in launch instance form
git-svn-id: https://svn.apache.org/repos/asf/incubator/deltacloud/trunk@1064071 13f79535-47bb-0310-9956-ffa450edef68

--- a/server/public/stylesheets/compiled/application.css
+++ b/server/public/stylesheets/compiled/application.css
@@ -637,3 +637,33 @@ li.docs {
   border : 1px solid #c00;
   background : #fbd1d1;
 }
+
+.new_instance {
+  border : 1px solid #ccc;
+  border-radius : 5px;
+  background : #eee;
+  clear : both;
+}
+
+.new_instance p {
+  margin : 5px;
+  clear : both;
+}
+
+.new_instance p label {
+  float : left;
+  width : 190px;
+}
+
+.new_instance p input[type=text]{
+  border : 1px solid #ccc;
+  font-size : 115%;
+  border-radius : 5px;
+  width : 220px;
+}
+
+h3.description {
+  float : right;
+  font-size : 70%;
+  color : #ccc;
+}
