Initial run-on-instance support for EC2 and GoGrid
git-svn-id: https://svn.apache.org/repos/asf/incubator/deltacloud/trunk@1064113 13f79535-47bb-0310-9956-ffa450edef68

--- a/server/views/docs/operation.html.haml
+++ b/server/views/docs/operation.html.haml
@@ -17,6 +17,7 @@
       %th Type
       %th Class
       %th Valid values
+      %th Description
   %tbody
     - @operation.each_param do |p|
       %tr
@@ -25,3 +26,4 @@
         %td{:style => "width:10em"} #{p.type}
         %td #{p.klass}
         %td{:style => "width:10em"} #{p.options.join(',')}
+        %td #{p.description}
