--- a/server/views/instances/index.html.haml
+++ b/server/views/instances/index.html.haml
@@ -28,3 +28,5 @@
         %td
           -instance.actions.each do |action|
             =link_to_action action, self.send(:"#{action}_instance_url", instance.id), instance_action_method(action)
+          - if driver.respond_to?(:run_on_instance) and instance.state=="RUNNING"
+            =link_to_action "Run command", url_for("/api/instances/#{instance.id}/run"), :get
