--- a/server/views/instances/show.xml.haml
+++ b/server/views/instances/show.xml.haml
@@ -21,6 +21,8 @@
     %actions
       - @instance.actions.compact.each do |instance_action|
         %link{:rel => instance_action, :method => instance_action_method(instance_action), :href => self.send("#{instance_action}_instance_url", @instance.id)}
+      - if driver.respond_to?(:run_on_instance)
+        %link{:rel => 'run', :method => :post, :href => run_instance_url(@instance.id)}
   - if @instance.instance_variables.include?("@launch_time")
     %launch_time<
       =@instance.launch_time
