Introduces blob metadata - Adds ability to specify arbitrary user metadata (KEY-VALUE) for S3, Cloudfiles and Azure, during blob creation
git-svn-id: https://svn.apache.org/repos/asf/incubator/deltacloud/trunk@1066088 13f79535-47bb-0310-9956-ffa450edef68

--- a/server/views/blobs/show.html.haml
+++ b/server/views/blobs/show.html.haml
@@ -19,6 +19,12 @@
     %dt Content
     %dd
       =link_to 'Blob content', bucket_url(@blob.bucket) + '/' + @blob.id + '/content'
+    %dt User_Metadata
+    %dd
+      -@blob.user_metadata.each do |k,v|
+        %b #{k} :
+        #{v}
+        %br
     %dt Delete this Blob
     %dd
       %form{ :action => bucket_url(@blob.bucket) + '/' + @blob.id , :method => :post }
