Allow creating 'sandbox' instances in GoGrid
git-svn-id: https://svn.apache.org/repos/asf/incubator/deltacloud/trunk@1069309 13f79535-47bb-0310-9956-ffa450edef68

--- a/server/views/instances/new.html.haml
+++ b/server/views/instances/new.html.haml
@@ -14,6 +14,11 @@
       %label
         Number of instances:
       %input{ :type => :text, :value => "1", :name => :instance_count }
+  -if driver_has_feature?(:sandboxing)
+    %p
+      %label
+        Sandbox?:
+      %input{ :type => :checkbox, :value => "1", :name => :sandbox }
   -if driver_has_feature?(:register_to_load_balancer)
     %p
       %label
