Revamped using 'cloudservers' gem (thanks Rackspace!)
git-svn-id: https://svn.apache.org/repos/asf/incubator/deltacloud/trunk@1071575 13f79535-47bb-0310-9956-ffa450edef68

--- a/server/views/instances/show.html.haml
+++ b/server/views/instances/show.html.haml
@@ -36,6 +36,15 @@
     %dt Private Addresses
     %dd
       = @instance.private_addresses.collect { |address| "<div>#{address}</div>" }.join
+  - if @instance.password
+    %di
+      %dt Username
+      %dd
+        = @instance.username
+    %di
+      %dt Password
+      %dd
+        = @instance.password
   %di
     %dt
     %dd
