Advertising supported drivers and their entrypoints Advertising of credentials needed for backend authentication Drivers Hash moved to YAML configuration file
git-svn-id: https://svn.apache.org/repos/asf/incubator/deltacloud/trunk@1073029 13f79535-47bb-0310-9956-ffa450edef68

--- a/server/views/api/drivers.html.haml
+++ b/server/views/api/drivers.html.haml
@@ -7,7 +7,7 @@
       %th ID
       %th Name
   %tbody
-    - DRIVERS.each do |id, details|
+    - settings.drivers.each do |id, details|
       %tr
         %td{ :width => '20%' }
           %tt= id
