--- a/server/views/instances/index.html.haml
+++ b/server/views/instances/index.html.haml
@@ -14,17 +14,17 @@
     - @instances.each do |instance|
       %tr
         %td
-          = link_to instance.id, instance_url( instance.id )
+          = link_to truncate_words(instance.id), instance_url( instance.id )
         %td
           = link_to instance.owner_id, images_url
         %td
           = instance.name
         %td
-          = link_to instance.image_id, image_url( instance.image_id )
+          = link_to truncate_words(instance.image_id), image_url( instance.image_id )
         %td
           = instance.hardware_profile ? link_to(instance.hardware_profile, hardware_profile_url( instance.instance_profile.id )) : 'default'
         %td
-          = instance.state
+          = image_for_state(instance.state)
         %td
           -instance.actions.each do |action|
             =link_to_action action, self.send(:"#{action}_instance_url", instance.id), instance_action_method(action)
