Added Image creation from Instances (EC2, Mock, GoGrid, Rackspace)
git-svn-id: https://svn.apache.org/repos/asf/incubator/deltacloud/trunk@1078765 13f79535-47bb-0310-9956-ffa450edef68

--- a/server/views/images/show.xml.haml
+++ b/server/views/images/show.xml.haml
@@ -3,3 +3,4 @@
   - @image.attributes.select{ |attr| attr!=:id }.each do |attribute|
     - haml_tag(attribute, :<) do
       - haml_concat @image.send(attribute)
+  %link{ :rel => 'create_instance', :method => :post, :href => "#{instances_url};image_id=#{@image.id}"}
