--- a/server/views/images/index.xml.haml
+++ b/server/views/images/index.xml.haml
@@ -9,4 +9,5 @@
               - haml_concat image.send(attribute)
           - else
             - haml_concat image.send(attribute)
+      %link{ :rel => 'create_instance', :method => :post, :href => "#{instances_url};image_id=#{image.id}"}
 
