--- a/server/views/instances/index.xml.haml
+++ b/server/views/instances/index.xml.haml
@@ -13,6 +13,10 @@
       %actions
         - instance.actions.compact.each do |action|
           %link{:rel => action, :href => self.send("#{action}_instance_url", instance.id), :method => instance_action_method(action)}
+        - if driver.respond_to?(:run_on_instance)
+          %link{:rel => 'run', :method => :post, :href => run_instance_url(instance.id)}
+        - if instance.can_create_image?
+          %link{:rel => 'create_image', :method => :post, :href => "#{create_image_url};instance_id=#{instance.id}"}
       %public_addresses
         - instance.public_addresses.each do |address|
           %address  #{address}
