Fixed index action in Images
git-svn-id: https://svn.apache.org/repos/asf/incubator/deltacloud/trunk@1081408 13f79535-47bb-0310-9956-ffa450edef68

--- a/server/views/images/index.xml.haml
+++ b/server/views/images/index.xml.haml
@@ -9,5 +9,6 @@
               - haml_concat image.send(attribute)
           - else
             - haml_concat image.send(attribute)
-      %link{ :rel => 'create_instance', :method => :post, :href => "#{instances_url};image_id=#{image.id}"}
+      %actions
+        %link{ :rel => 'create_instance', :method => :post, :href => "#{instances_url};image_id=#{image.id}"}
 
