Show parameters added by features in the docs
git-svn-id: https://svn.apache.org/repos/asf/incubator/deltacloud/trunk@1084004 13f79535-47bb-0310-9956-ffa450edef68

--- a/server/views/docs/operation.html.haml
+++ b/server/views/docs/operation.html.haml
@@ -25,5 +25,19 @@
           %em #{p.name}
         %td{:style => "width:10em"} #{p.type}
         %td #{p.klass}
-        %td{:style => "width:10em"} #{p.options.join(',')}
+        %td{:style => "width:10em"} #{p.options.join(', ')}
         %td #{p.description}
+    - @features.sort { |a,b| a.name.to_s <=> b.name.to_s }.each do |f|
+      %tr
+        %th{:colspan => 4}
+          Feature #{f.name}
+        %th{:colspan => 1}
+          %em= f.description
+      - f.decl.operation(@operation.name).each_param do |p|
+        %tr
+          %td{:style => "width:15em"}
+            %em #{p.name}
+          %td{:style => "width:10em"} #{p.type}
+          %td #{p.klass}
+          %td{:style => "width:10em"} #{p.options.join(', ')}
+          %td #{p.description}
