Eucalyptus: add driver to documentation
git-svn-id: https://svn.apache.org/repos/asf/incubator/deltacloud/trunk@1090467 13f79535-47bb-0310-9956-ffa450edef68

--- a/site/content/documentation.haml
+++ b/site/content/documentation.haml
@@ -99,6 +99,16 @@ filter:
       page in your AWS account
   %tr
     %td
+      %strong Eucalyptus
+    %td
+      %tt eucalyptus
+    %td
+      Access Key ID
+    %td
+      Secret Access Key
+    %td
+  %tr
+    %td
       %strong GoGrid
     %td
       %tt gogrid
