* views: update copyright footers
Change copyright from Red Hat to ASF

git-svn-id: https://svn.apache.org/repos/asf/incubator/deltacloud/trunk@1091592 13f79535-47bb-0310-9956-ffa450edef68

--- a/server/views/error.html.haml
+++ b/server/views/error.html.haml
@@ -26,6 +26,6 @@
         #driver_info
           Driver: #{driver_symbol} | API version: #{settings.version}
         #copyright
-          Copyright 2009, 2010
-          %a{:href => 'http://redhat.com'} Red Hat
+          Copyright 2009-2011
+          %a{:href => 'http://incubator.apache.org/deltacloud/'} The Apache Software Foundation
           and individual contributors.
