--- a/server/views/layout.html.haml
+++ b/server/views/layout.html.haml
@@ -26,6 +26,6 @@
         #driver_info
           Driver: #{driver_symbol} | API version: #{settings.version}
         #copyright
-          Copyright 2009, 2010
-          %a{:href => 'http://redhat.com'} Red Hat
+          Copyright 2009-2011
+          %a{:href => 'http://incubator.apache.org/deltacloud/'} The Apache Software Foundation
           and individual contributors.
