site: update driver matrices for 0.3.0
git-svn-id: https://svn.apache.org/repos/asf/incubator/deltacloud/trunk@1097645 13f79535-47bb-0310-9956-ffa450edef68

--- a/site/content/documentation.haml
+++ b/site/content/documentation.haml
@@ -124,6 +124,16 @@ filter:
       and click on the key you want to use to find the shared secret.
   %tr
     %td
+      %strong IBM SBC
+    %td
+      %tt sbc
+    %td
+      Username
+    %td
+      Password
+    %td
+  %tr
+    %td
       %strong Microsoft Azure (Storage Account only)
     %td
       %tt azure
